[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Shop/ShopLabel.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Fonts/AGENCYB.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Teko-VariableFont_wght.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 5 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 510.938, 368 )
scale = Vector2( 0.124012, 0.135233 )
texture = ExtResource( 2 )

[node name="Turret1" type="Node2D" parent="."]

[node name="Turret1Buy" type="TouchScreenButton" parent="Turret1"]
position = Vector2( 97, 340 )
scale = Vector2( 1.98438, 0.4375 )
normal = ExtResource( 3 )

[node name="Turret1Label" type="Label" parent="Turret1"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 103.0
margin_top = 301.0
margin_right = 193.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "CURRENT TURRET :"

[node name="PlayerCoin" type="Node2D" parent="."]

[node name="CurrentCoin" type="Label" parent="PlayerCoin"]
margin_left = 823.0
margin_top = 92.0
margin_right = 887.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
text = "COIN: "

[node name="GamePlay" type="TouchScreenButton" parent="."]
position = Vector2( 850, 499 )
scale = Vector2( 1.67188, 2 )
normal = ExtResource( 3 )

[node name="ExtraVagons" type="Node2D" parent="."]

[node name="VagonLabel" type="Label" parent="ExtraVagons"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 279.0
margin_top = 301.0
margin_right = 369.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 1 )
text = "CURRENT VAGON :"

[node name="ExtraVagonBuyButton" type="TouchScreenButton" parent="ExtraVagons"]
position = Vector2( 272, 344 )
scale = Vector2( 1.6875, 0.453125 )
normal = ExtResource( 3 )

[connection signal="pressed" from="Turret1/Turret1Buy" to="." method="_on_Turret1Buy_pressed"]
[connection signal="pressed" from="GamePlay" to="." method="_on_GamePlay_pressed"]
[connection signal="pressed" from="ExtraVagons/ExtraVagonBuyButton" to="." method="_on_ExtraVagonBuyButton_pressed"]
